k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-jakegaylor-com
  namespace: ai-jakegaylor-com
  labels:
    app: ai-jakegaylor-com
spec:
  type: ClusterIP
  selector:
    app: ai-jakegaylor-com
  ports:
    - port: 80
      targetPort: 3000
